--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center|top"
     android:background="@drawable/login_masyarakat"
     android:foregroundGravity="center"
-    android:visibility="visible"
-    tools:context=".MainActivity">
+    app:layout_anchorGravity="center"
+    tools:context=".login">
 
     <TextView
         android:id="@+id/textView"
@@ -23,18 +24,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="74dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="15dp"
-        android:text="Masuk"
-        android:textColor="#00B4D8"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,37 +36,30 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="74dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="15dp"
+        android:text="Masuk"
+        android:textColor="#00B4D8"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:text="Register"
-        android:textColor="#0077B6"
+        android:text="Masuk"
+        android:textColor="#00B4D8"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName14"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:ems="10"
-        android:hint="Nama Lengkap"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textColor="#0077B6"
-        android:textColorHint="#0077B6"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
-        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editTextTextPersonName7"
@@ -101,7 +83,7 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName15"
+        android:id="@+id/editTextTextPersonName"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
@@ -112,18 +94,17 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColor="#0077B6"
-        android:textColorHighlight="#0077B6"
+        android:textColorHighlight="#C89797"
         android:textColorHint="#0077B6"
-        android:textColorLink="#03DAC5"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName14"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName16"
+        android:id="@+id/editTextTextPersonName2"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
@@ -134,52 +115,33 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColor="#0077B6"
+        android:textColorHighlight="#C89797"
         android:textColorHint="#0077B6"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName15"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName17"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:ems="10"
-        android:hint="No. Telp"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textColor="#0077B6"
-        android:textColorHint="#0077B6"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName16"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
         tools:ignore="TouchTargetSizeCheck" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
         android:minHeight="48dp"
         android:text="Centang jika sudah di isi semua"
         android:textColor="#020202"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName17" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="#0077B6"
+        app:cardBackgroundColor="#00B4D8"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -190,8 +152,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Register"
+            android:text="Masuk"
             android:textSize="18dp" />
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
